created a package overide to be protected against a known vulnerability

--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -52,5 +52,10 @@
         "http://localhost:3000/*"
       ]
     }
+  },
+  "pnpm": {
+    "overrides": {
+      "got@<11.8.5": ">=11.8.5"
+    }
   }
 }
