--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "pnpm": {
     "overrides": {
       "got@<11.8.5": ">=11.8.5",
-      "msgpackr@<1.10.1": ">=1.10.1"
+      "msgpackr@<1.10.1": ">=1.10.1",
+      "vite@<5.0.12": ">=5.0.12"
     }
   }
 }
